# proto/gen/api/v1/rag_service_grpc.pb.go
@@ -1,0 +1,207 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.2
+// - protoc             (unknown)
+// source: api/v1/rag_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	RagService_Search_FullMethodName         = "/memos.api.v1.RagService/Search"
+	RagService_RebuildIndex_FullMethodName   = "/memos.api.v1.RagService/RebuildIndex"
+	RagService_GetIndexStatus_FullMethodName = "/memos.api.v1.RagService/GetIndexStatus"
+)
+
+// RagServiceClient is the client API for RagService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type RagServiceClient interface {
+	// Search runs a hybrid (full-text + semantic) search over the memos the current
+	// user can access. Global search and in-library search share this RPC, differing
+	// only by scope.
+	Search(ctx context.Context, in *SearchRequest, opts ...grpc.CallOption) (*SearchResponse, error)
+	// RebuildIndex clears and re-enqueues the entire search index. Instance owners only.
+	RebuildIndex(ctx context.Context, in *RebuildIndexRequest, opts ...grpc.CallOption) (*RebuildIndexResponse, error)
+	// GetIndexStatus returns the current index queue progress.
+	GetIndexStatus(ctx context.Context, in *GetIndexStatusRequest, opts ...grpc.CallOption) (*GetIndexStatusResponse, error)
+}
+
+type ragServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewRagServiceClient(cc grpc.ClientConnInterface) RagServiceClient {
+	return &ragServiceClient{cc}
+}
+
+func (c *ragServiceClient) Search(ctx context.Context, in *SearchRequest, opts ...grpc.CallOption) (*SearchResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SearchResponse)
+	err := c.cc.Invoke(ctx, RagService_Search_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *ragServiceClient) RebuildIndex(ctx context.Context, in *RebuildIndexRequest, opts ...grpc.CallOption) (*RebuildIndexResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(RebuildIndexResponse)
+	err := c.cc.Invoke(ctx, RagService_RebuildIndex_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *ragServiceClient) GetIndexStatus(ctx context.Context, in *GetIndexStatusRequest, opts ...grpc.CallOption) (*GetIndexStatusResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GetIndexStatusResponse)
+	err := c.cc.Invoke(ctx, RagService_GetIndexStatus_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// RagServiceServer is the server API for RagService service.
+// All implementations must embed UnimplementedRagServiceServer
+// for forward compatibility.
+type RagServiceServer interface {
+	// Search runs a hybrid (full-text + semantic) search over the memos the current
+	// user can access. Global search and in-library search share this RPC, differing
+	// only by scope.
+	Search(context.Context, *SearchRequest) (*SearchResponse, error)
+	// RebuildIndex clears and re-enqueues the entire search index. Instance owners only.
+	RebuildIndex(context.Context, *RebuildIndexRequest) (*RebuildIndexResponse, error)
+	// GetIndexStatus returns the current index queue progress.
+	GetIndexStatus(context.Context, *GetIndexStatusRequest) (*GetIndexStatusResponse, error)
+	mustEmbedUnimplementedRagServiceServer()
+}
+
+// UnimplementedRagServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedRagServiceServer struct{}
+
+func (UnimplementedRagServiceServer) Search(context.Context, *SearchRequest) (*SearchResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method Search not implemented")
+}
+func (UnimplementedRagServiceServer) RebuildIndex(context.Context, *RebuildIndexRequest) (*RebuildIndexResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method RebuildIndex not implemented")
+}
+func (UnimplementedRagServiceServer) GetIndexStatus(context.Context, *GetIndexStatusRequest) (*GetIndexStatusResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetIndexStatus not implemented")
+}
+func (UnimplementedRagServiceServer) mustEmbedUnimplementedRagServiceServer() {}
+func (UnimplementedRagServiceServer) testEmbeddedByValue()                    {}
+
+// UnsafeRagServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to RagServiceServer will
+// result in compilation errors.
+type UnsafeRagServiceServer interface {
+	mustEmbedUnimplementedRagServiceServer()
+}
+
+func RegisterRagServiceServer(s grpc.ServiceRegistrar, srv RagServiceServer) {
+	// If the following call panics, it indicates UnimplementedRagServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&RagService_ServiceDesc, srv)
+}
+
+func _RagService_Search_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SearchRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RagServiceServer).Search(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RagService_Search_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RagServiceServer).Search(ctx, req.(*SearchRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RagService_RebuildIndex_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RebuildIndexRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RagServiceServer).RebuildIndex(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RagService_RebuildIndex_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RagServiceServer).RebuildIndex(ctx, req.(*RebuildIndexRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RagService_GetIndexStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetIndexStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RagServiceServer).GetIndexStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RagService_GetIndexStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RagServiceServer).GetIndexStatus(ctx, req.(*GetIndexStatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// RagService_ServiceDesc is the grpc.ServiceDesc for RagService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var RagService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.RagService",
+	HandlerType: (*RagServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "Search",
+			Handler:    _RagService_Search_Handler,
+		},
+		{
+			MethodName: "RebuildIndex",
+			Handler:    _RagService_RebuildIndex_Handler,
+		},
+		{
+			MethodName: "GetIndexStatus",
+			Handler:    _RagService_GetIndexStatus_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/rag_service.proto",
+}
